--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,5 @@
 {
-    "name": "",
-    "description": "",
-    "require-dev": {
-        "phpunit/phpunit": "^9.1",
-        "friendsofphp/php-cs-fixer": "^2.0"
-    },
-    "require": {},
-  "scripts": {
-    "test": "phpunit",
-    "php-cs-fixer": "php-cs-fixer fix ./"
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "src"
+    "require": {
+        "phpmailer/phpmailer": "^6.3"
     }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "App\\": "tests"
-    }
-  }
 }
